fixed issue that d3 v6 has compilation error on IE-11

--- a/src/components/LineChart/styles.scss
+++ b/src/components/LineChart/styles.scss
@@ -2,6 +2,8 @@
 @import "styles/mixins";
 
 .lineChart {
+  overflow: hidden;
+
   :global {
     svg {
       display: block;
